# glSeries

./: CMakeLists.txt  CMakeSettings.json
include/: IndexBuffer.h  Renderer.h  VertexBuffer.h
lib/glew/: glew.pc
lib/glew/glew_build/cmake/: CMakeLists.txt
res/shader/: basic.shader
src/: IndexBuffer.cpp  VertexBuffer.cpp  main.cpp
